--- a/self-assessment-app/package.json
+++ b/self-assessment-app/package.json
@@ -32,6 +32,7 @@
     "@trpc/server": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.515.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
